erDiagram
    USUARIOS {
        int id PK
        string username
        string email
        string hashed_password
        string rol
        bool is_active
        datetime created_at
        datetime updated_at
    }

    CLIENTES {
        int id PK
        string nombre
        string calle
        string municipio
        string provincia
        string localidad
        bool es_mipyme
        string cuenta_de_pago
        datetime created_at
        datetime updated_at
    }

    CONTACTOS_CLIENTES {
        int id PK
        int cliente_id FK
        string tipo
        string valor
        datetime created_at
    }

    PRODUCTOS {
        int id PK
        string nombre
        text descripcion
        numeric precio_venta
        int stock
        int stock_minimo
        datetime created_at
        datetime updated_at
    }

    PEDIDOS {
        int id PK
        int cliente_id FK
        datetime fecha_pedido
        string estado
        numeric total
        numeric total_pagado
        bool devolucion_sacar_negocio
        datetime created_at
        datetime updated_at
    }

    DETALLES_PEDIDO {
        int id PK
        int pedido_id FK
        int producto_id FK
        int cantidad
        numeric precio_unitario
        numeric subtotal
        datetime created_at
    }

    PAGOS {
        int id PK
        int pedido_id FK
        numeric monto
        string cuenta_origen
        string codigo_transfermovil
        datetime fecha_pago
        datetime created_at
    }

    DEVOLUCIONES {
        int id PK
        int pedido_id FK
        int usuario_id FK
        string motivo
        text descripcion
        datetime fecha_devolucion
        json productos_devueltos
        numeric monto_total
        datetime created_at
        datetime updated_at
    }

    LOGS_ACCIONES {
        int id PK
        int usuario_id FK
        string endpoint
        string metodo_http
        json payload
        string ip_address
        text user_agent
        int status_code
        int response_time_ms
        datetime created_at
    }

    USUARIOS ||--o{ LOGS_ACCIONES : "registra"
    USUARIOS ||--o{ DEVOLUCIONES : "autoriza"
    CLIENTES ||--o{ PEDIDOS : "realiza"
    CLIENTES ||--o{ CONTACTOS_CLIENTES : "tiene"
    PEDIDOS ||--o{ DETALLES_PEDIDO : "incluye"
    PEDIDOS ||--o{ PAGOS : "recibe"
    PEDIDOS ||--|| DEVOLUCIONES : "puede tener"
    PRODUCTOS ||--o{ DETALLES_PEDIDO : "es requerido"
